syntax = "proto3";
package Propose;

service ProponerService {
    rpc Proponer(InfoMaquina) returns (Propuesta) {}
}

service ListarService {
    rpc Listar(ReceptStatus) returns (stream Libro) {}
}

service ListarChunksService {
    rpc ListarChunks(Libro) returns (stream InfoChunk) {}
}

message Propuesta {
    string Vm1 = 1;
    string Vm2 = 2;
    string Vm3 = 3;
    int64 Cant1 = 4;
    int64 Cant2 = 5;
    int64 Cant3 =6;
}

message InfoMaquina {
    string Puerto = 1;
    Propuesta Propuesta = 2;
    int64 Nchunks = 3;
    string Name = 4;
}


message Libro{
    string Name = 1;
}

message ReceptStatus {
    string Message = 1;
}

message InfoChunk {
    string Puerto = 1;
    string Part = 2;
}
